[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Level Editor/LevelEditorButtons.gd" type="Script" id=1]
[ext_resource path="res://Images/Background.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Level Editor/GridSelect.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Level Editor/SaveLevel.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Level Editor/ScaleInputField.gd" type="Script" id=5]

[node name="BackgroundGUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Background Top" type="ColorRect" parent="."]
margin_left = -30.8167
margin_top = -16.1032
margin_right = 669.183
margin_bottom = 383.897
mouse_filter = 2
input_pass_on_modal_close_click = false
color = Color( 0.803922, 0.870588, 1, 1 )

[node name="Control" type="Control" parent="."]
margin_top = 10.0
margin_right = 1.0
margin_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ice" type="Button" parent="Control"]
margin_left = 10.0
margin_top = 2.0
margin_right = 60.0
margin_bottom = 22.0
mouse_filter = 1
text = "Ice"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sand" type="Button" parent="Control"]
margin_left = 70.0
margin_top = 2.0
margin_right = 120.0
margin_bottom = 22.0
mouse_filter = 1
text = "Sand"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wall" type="Button" parent="Control"]
margin_left = 130.0
margin_top = 2.0
margin_right = 180.0
margin_bottom = 22.0
mouse_filter = 1
text = "Wall"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scale" type="Control" parent="Control"]
margin_left = 190.0
margin_right = 190.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Width" type="LineEdit" parent="Control/Scale"]
margin_right = 60.0
margin_bottom = 24.0
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
placeholder_text = "xscale"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Height" type="LineEdit" parent="Control/Scale"]
margin_left = 70.0
margin_right = 130.0
margin_bottom = 24.0
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
placeholder_text = "yscale"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToMainMenu" type="Button" parent="Control"]
margin_left = 545.0
margin_top = 2.0
margin_right = 635.0
margin_bottom = 22.0
mouse_filter = 1
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="Control"]
margin_left = 445.0
margin_top = 2.0
margin_right = 535.0
margin_bottom = 22.0
mouse_filter = 1
text = "Save"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]

[node name="OptionButton" type="OptionButton" parent="Control/CanvasLayer"]
margin_left = 345.0
margin_top = 12.0
margin_right = 435.0
margin_bottom = 32.0
text = "Grid Size"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_left = -1.0
margin_top = 40.0
margin_right = 1715.0
margin_bottom = 810.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveNAME" type="LineEdit" parent="CanvasLayer/Control"]
margin_left = 220.0
margin_top = 130.0
margin_right = 420.0
margin_bottom = 180.0
text = "level_name"
align = 1
max_length = 30
expand_to_text_length = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveOK" type="Button" parent="CanvasLayer/Control"]
margin_left = 220.0
margin_top = 190.0
margin_right = 310.0
margin_bottom = 230.0
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveCANCEL" type="Button" parent="CanvasLayer/Control"]
margin_left = 330.0
margin_top = 190.0
margin_right = 420.0
margin_bottom = 230.0
text = "CANCEL"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/Ice" to="Control" method="_on_Ice_pressed"]
[connection signal="pressed" from="Control/Sand" to="Control" method="_on_Sand_pressed"]
[connection signal="pressed" from="Control/Wall" to="Control" method="_on_Wall_pressed"]
[connection signal="text_changed" from="Control/Scale/Width" to="Control/Scale/Width" method="_on_Width_text_changed"]
[connection signal="text_changed" from="Control/Scale/Height" to="Control/Scale/Height" method="_on_Height_text_changed"]
[connection signal="pressed" from="Control/ToMainMenu" to="Control" method="_on_ToMainMenu_pressed"]
[connection signal="pressed" from="Control/Save" to="Control/Save" method="_on_Save_pressed"]
[connection signal="item_selected" from="Control/CanvasLayer/OptionButton" to="Control/CanvasLayer/OptionButton" method="_on_OptionButton_item_selected"]
[connection signal="text_changed" from="CanvasLayer/Control/SaveNAME" to="Control/Save" method="_on_SaveNAME_text_changed"]
[connection signal="pressed" from="CanvasLayer/Control/SaveOK" to="Control/Save" method="_on_SaveOK_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/SaveCANCEL" to="Control/Save" method="_on_SaveCANCEL_pressed"]
